fix: fix tags overflow

--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
+    gap: 10px;
 
     &Content {
       display: flex;
@@ -79,6 +80,7 @@
     margin-top: 5px;
     display: flex;
     gap: 5px;
+    flex-wrap: wrap;
   }
 
   &__body {
